feat: Integrate dwell time tracking into web_server.py
- Add track parameter to base_detector.detect() method
- Update system.process_image() to support object tracking
- Enable tracking mode in web_server.py for dwell time detection
- Update config.yaml with dwell_time_threshold example
- Fully backward compatible with existing detection flow

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -55,6 +55,7 @@ virtual_fences:
     target_classes:
     - person
     min_confidence: 0.6
+    dwell_time_threshold: 3.0  # 新增：停留 3 秒才觸發警報
     enabled: true
 performance:
   enable_monitoring: true
