feat: 車輛截圖儲存與尺寸閾值可配置化功能\n\n1. 車牌辨識成功時儲存車輛截圖至 plate_records 資料表\n   - 新增 snapshot_base64 欄位\n   - 自動裁切車輛區域 (含 10% 邊界)\n   - JPEG 格式 base64 編碼\n\n2. 可配置車輛最小尺寸閾值\n   - 從硬編碼 200x150 降低至可配置 150x100\n   - 透過 config.yaml 設定 min_vehicle_width/height\n   - 改善遠距離車輛辨識能力\n\n3. 資料庫遷移腳本\n   - add_snapshot_to_plate_records.sql\n   - migrate_add_snapshot.py\n   - migrate_snapshot.bat

--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -38,6 +38,10 @@ modules:
     ocr_languages: ["en", "ch_tra"]
     gpu: false
     multi_zone_search: true
+    # 車輛區域最小尺寸要求（像素）
+    # 降低這些值可以辨識更遠/更小的車輛，但可能增加誤判
+    min_vehicle_width: 150   # 最小寬度（預設 150，原本 200）
+    min_vehicle_height: 100  # 最小高度（預設 100，原本 150）
     
   face_recognition:
     enabled: false
